# ardupilot

./: .gitmodules
Tools/ardupilotwaf/: boards.py  zephyr.py
libraries/AP_HAL/: AP_HAL_Boards.h
libraries/AP_HAL/board/: zephyr.h
libraries/AP_HAL_Zephyr/: AP_HAL_Zephyr.h  AP_HAL_Zephyr_Namespace.h  AP_HAL_Zephyr_Private.h  AnalogIn.cpp  AnalogIn.h  GPIO.cpp  GPIO.h  HAL_Zephyr_Class.cpp  HAL_Zephyr_Class.h  I2CDevice.cpp  I2CDevice.h  Kconfig  MockINS.cpp  MockINS.h  PeriodicCallback.cpp  PeriodicCallback.h  RCInput.cpp  RCInput.h  RCOutput.cpp  RCOutput.h  RCOutput_FabricServo.cpp  RCOutput_FabricServo.h  README.md  SPIDevice.cpp  SPIDevice.h  Scheduler.cpp  Scheduler.h  Semaphores.cpp  Semaphores.h  Storage.cpp  Storage.h  UARTDriver.cpp  UARTDriver.h  Util.cpp  Util.h  system.cpp
libraries/AP_HAL_Zephyr/app/: CMakeLists.txt  Kconfig  main.cpp  prj.conf
libraries/AP_HAL_Zephyr/boards/beagle/beaglev_fire/: CMakeLists.txt  beaglev_fire_polarfire_u54.conf  beaglev_fire_polarfire_u54.overlay  mss_ahb_div.c
libraries/AP_HAL_Zephyr/drivers/pwm/: pwm_fabric_servo.c
libraries/AP_HAL_Zephyr/drivers/spi/: spi_mchp_mss_cs.c
libraries/AP_HAL_Zephyr/dts/bindings/pwm/: beaglev-fire,fabric-servo-pwm.yaml
libraries/AP_HAL_Zephyr/dts/bindings/spi/: ardupilot,mpfs-mss-spi.yaml
libraries/AP_HAL_Zephyr/hwdef/beaglev_fire/: hwdef.h
libraries/AP_HAL_Zephyr/include/: ap_hal_zephyr_compat.h
libraries/AP_HAL_Zephyr/include/sys/: vfs.h
